err/delogx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DelogX'...
Listing './lib/python3.5/site-packages/DelogX/defaults'...
Listing './lib/python3.5/site-packages/DelogX/defaults/deploy'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_ext_link'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_feed'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_md_del'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_readmore'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_readmore/locale'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_readmore/locale/en_US'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_readmore/locale/zh_CN'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_tags'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_tags/locale'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_tags/locale/en_US'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/delog_tags/locale/zh_CN'...
Listing './lib/python3.5/site-packages/DelogX/defaults/plugins/example_plugin'...
Listing './lib/python3.5/site-packages/DelogX/defaults/themes'...
Listing './lib/python3.5/site-packages/DelogX/defaults/themes/default'...
Listing './lib/python3.5/site-packages/DelogX/defaults/themes/default/static'...
Listing './lib/python3.5/site-packages/DelogX/entity'...
Listing './lib/python3.5/site-packages/DelogX/locale'...
Listing './lib/python3.5/site-packages/DelogX/locale/en_US'...
Listing './lib/python3.5/site-packages/DelogX/locale/zh_CN'...
Listing './lib/python3.5/site-packages/DelogX/utils'...
Listing './lib/python3.5/site-packages/DelogX-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
